# Cours

./: .gitignore  README.md
AIVI/Dedieu_Wolski_Lab1/: RapportTP1.txt
AIVI/Dedieu_Wolski_Lab1/Lab1_code/: CMakeLists.txt  entropyGraph.gnuplot  example2.gnuplot  example3.gnuplot  lab1.cpp  utils.cpp  utils.hpp
AIVI/Dedieu_Wolski_Lab2/Lab2_code/: CMakeLists.txt  blockmatching.cpp  entropyPSNR.gnuplot  example1.gnuplot  example2.gnuplot  lab2.cpp  mse.gnuplot  msemono2.gnuplot  utils.cpp  utils.hpp
AIVI/Dedieu_Wolski_Lab3/Lab3_code/: CMakeLists.txt  GME.cpp  GME.hpp  HornSchunck.cpp  HornSchunck.hpp  ResultsLab3.gnuplot  blockmatching.cpp  blockmatching.hpp  example1.gnuplot  example3.gnuplot  lab2.cpp  lab3f.cpp  lab3gme.cpp  lab3hs.cpp  lab3mit.cpp  motionEstimation.cpp  motionEstimation.hpp  utils.cpp  utils.hpp
AIVI/Dedieu_Wolski_Lab3/Lab3_code/OpticalFlow/: readme.txt
AIVI/Dedieu_Wolski_Lab3/Lab3_code/OpticalFlow/mex/: Coarse2FineTwoFrames.cpp  GaussianPyramid.cpp  Image.h  ImageIO.h  ImageProcessing.h  NoiseModel.h  OpticalFlow.cpp  Stochastic.h  project.h
AIVI/Dedieu_Wolski_Lab3/Lab3_code/data/: statsENT_HS_3.txt  statsMSE_HS_3.txt  statsPSNR_HS_3.txt  stats_ENT_MB3.txt  stats_F_1.txt  stats_F_3.txt  stats_GME.txt  stats_HS_1.txt  stats_MB_1.txt  stats_MIT.txt  stats_MSE_MB3.txt  stats_PSNR_MB3.txt
AIVI/Dedieu_Wolski_Lab4/Lab4/: CMakeLists.txt  Classifier.cpp  Classifier.hpp  classification.cpp  lab4.cpp
AIVI/Dedieu_Wolski_Lab4/Lab4/Data/model/: PARKINSON_flou_mean4k.binaryproto  deploy.prototxt  label.txt  solver.prototxt  train_val.prototxt
AIVI/Dedieu_Wolski_Lab4/Lab4_bis/: CMakeLists.txt  create_frames_salMix.cpp
AIVI/cours/: cours.docx
AMIP/Assignement1_awolski/code/: SSD.m  myPatch.m
AMIP/Data_For_Practice/MexTutorial/: Mex_tutorial.m
AMIP/tp1/: Assignement.m  SSD.m  myPatch.m  patchImg.m  randPatch.m  textureSynth.m  tp1.m
AMIP/tp2/: PatchMatch.asv  PatchMatch.m  PatchMatchBad.m  myPatch.m  randPatch.m
AMIP/tp3/GCMex/: GCMex.m
IR/: article VF.docx  article sous word.docx
SIA/: Cours.docx
SIA/Rapport/tp1/: index.html  style.css
SIA/Rapport/tp2/: index.html
SIA/tp1/MonteCarlo/: Makefile  gnuplot_i.hpp  mc_int  mc_int.cpp
SIA/tp1/Rapport/: index.html
SIA/tp1/build-sia_td1-Desktop-Défaut/: CMakeCache.txt  Makefile  cmake_install.cmake  sia_raytracer  sia_td3.cbp  warptest
SIA/tp1/build-sia_td1-Desktop-Défaut/ext_build/: Makefile  cmake_install.cmake
SIA/tp1/sia_td1/: CMakeLists.txt
SIA/tp1/sia_td1/data/: deuxPlans.scn  deuxSpheres.exr  deuxSpheres.exr.xmp  deuxSpheres.scn  deuxSpheres8.exr  deuxSpheres8.exr.xmp  killerooGlass.scn  killeroo_ao.exr  killeroo_ao.scn  killeroo_area.exr  killeroo_area.scn  petanque.scn  phong.scn  sphereWard.scn  sphereWardEnvMap.scn  troisSpheres.exr  tw.exr  tw.off  tw.scn  tw_area.exr  tw_area.scn
SIA/tp1/sia_td1/include/: areaLight.h  light.h  lightProbe.h  mesh.h  plane.h  ray.h  sphere.h
SIA/tp1/sia_td1/shaders/: flat.frag  simple.frag  tonemap.vert
SIA/tp1/sia_td1/src/: ao.cpp  areaLight.cpp  bvh.cpp  quad.cpp  scene.cpp  shape.cpp  viewer.cpp  ward.cpp  warp.cpp  whitted.cpp
SIA/tp2/sia_td2/: CMakeLists.txt
SIA/tp2/sia_td2/data/: killeroo.scn  killeroo_ao.scn  killeroo_area.scn  light_source.exr  sphereWard.exr  sphereWard.scn  sphereWardEnvMap.exr  sphereWardEnvMap.scn  tasSpheres.scn  terre-lune.scn  troisSpheres.scn  tw_area.scn  ward.scn
SIA/tp2/sia_td2/ext/: CMakeLists.txt
SIA/tp2/sia_td2/include/: bitmap.h  camera.h  integrator.h  material.h  quad.h  scene.h  trackball.h  warp.h
SIA/tp2/sia_td2/shaders/: flat.vert  simple.vert  tonemap.frag
SIA/tp2/sia_td2/src/: ao.cpp  areaLight.cpp  camera.cpp  direct.cpp  direct_mats.cpp  directionalLight.cpp  flat.cpp  main.cpp  material.cpp  mesh.cpp  path_mats.cpp  phong.cpp  plane.cpp  pointLight.cpp  scene.cpp  texcoords.cpp  trackball.cpp  viewer.cpp  ward.cpp  warptest.cpp  whitted.cpp
SIA/tp4/sia_td4/: CMakeLists.txt
SIA/tp4/sia_td4/data/: .mlp  box.scn  cbox_path_mats.scn  cbox_pmap.scn  killeroo_ao.scn  sphereWard.scn  sphereWardEnvMap.scn  tw.scn
SIA/tp4/sia_td4/ext/: CMakeLists.txt
SIA/tp4/sia_td4/include/: areaLight.h  bvh.h  glPrimitives.h  kdtree.h  material.h  photon.h  scene.h  shape.h  viewer.h
SIA/tp4/sia_td4/src/: ao.cpp  areaLight.cpp  bitmap.cpp  bvh.cpp  direct_lms.cpp  direct_mats.cpp  lightProbe.cpp  material.cpp  mesh.cpp  normals.cpp  path_mats.cpp  phong.cpp  photon.cpp  photonmapper.cpp  scene.cpp  sphere.cpp  ward.cpp  (+3 more)
SIA/tp5/sia_td5/: CMakeLists.txt
SIA/tp5/sia_td5/data/models/: sphere.off  tw.off
SIA/tp5/sia_td5/data/shaders/: blinn.frag  gbuffer.frag  gbuffer.vert  simple.frag  simple.vert
SIA/tp5/sia_td5/ext/SOIL/: CMakeLists.txt
SIA/tp5/sia_td5/ext/glbinding/: CMakeLists.txt
SIA/tp5/sia_td5/ext/glbinding/source/: CMakeLists.txt
SIA/tp5/sia_td5/include/: camera.h  cube.h  fbo.h  mesh.h  meshloader.h  opengl.h  quad.h  shape.h  sphere.h  trackball.h  viewer.h
SIA/tp5/sia_td5/src/: camera.cpp  cube.cpp  fbo.cpp  main.cpp  mesh.cpp  meshloader.cpp  quad.cpp  shader.cpp  sphere.cpp  trackball.cpp  viewer.cpp
TIA/Assignement3_awolski/: graphCut.m  minCut.m
TIA/Assignement3_awolski/GCMex/: graphCut.m  minCut.m  overlapError.m
TIA/Assignement3_awolski/code/: AIDE.m  graphCut.m  minCut.m  smoothness.m
TIA/Data_For_Practice/MatlabTutorial/: Matlab_tutorial.m  Mex_tutorial.c  Mex_tutorial.m
TIA/Data_For_Practice/MexTutorial/: ._Mex_tutorial.c
TIA/tp1/: inPainting.m
TIA/tp2/: assoAB.m
TIA/tp3/GCMex/: AIDE.m  minCut.m  overlapError.m
VRAR/Rapport/tp2/: index.html
VRAR/Rapport/tp3/: index.html
VRAR/Rapport/tp4/: index.html
VRAR/TD1/: index.html
VRAR/TD1/js/: render.js
VRAR/TD2/js/: anaglyphRenderer.js  displayParameters.js  dofRenderer.js  render.js
VRAR/TD2/shaders/: shaderDof.frag
VRAR/TD3/camera_calibration/: CMakeLists.txt  camera_calibration.cpp
VRAR/TD3/camera_calibration/cmake/: FindOpenCV.cmake
VRAR/TD3/js/: displayParameters.js  render.js
VRAR/TD4/js/: displayParameters.js  render.js  stereoRenderer.js
VRAR/TD4/shaders/: shaderUnwarp.frag
(+24 files in other folders)
